test/should_not_compile/word-constant-2.sml
val rec _ = fn () => 0wx1_0000_0000_0000_0000 : Word64.word;
